updated contact to work with email

--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@ description:
 		<p>You can also find us on <a href="https://www.facebook.com/beam.teach/">Facebook</a> and <a href="https://www.instagram.com/beam_berkeley/">Instagram</a>!</p>
 	</div>
 
-	<form action="mailto:kaushalpartani@gmail.com" method="post" class="contact-form">
-		<input type="hidden" name="_to" value="panerdavid99@gmail.com" />
+	<form action="http://formspree.io/beam.teach@gmail.com" method="post" class="contact-form">
+		<input type="hidden" name="_to" value="beam.teach@gmail.com" />
 		<input type="text" name="_gotcha" style="display: none;">
 
 		<b><label for="name">Full Name *</label></b>
