'FUCK YOU DAVID THAT'S NOT MONTSERRAT', 'MARGIN -50', 'WHO IS KELVIN ZHANG', 'BITCH YOU CODE I DESIGN', and uploaded the correct photos

--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@ description:
 
 <!-- Tab links -->
 <div class="tab">
-    <button class="tablinks" onclick="openTab(event, 'Mission')" id='defaultOpen'>Mission</button>
-    <button class="tablinks" onclick="openTab(event, 'Structure')">Structure</button>
+    <button  class="tablinks" onclick="openTab(event, 'Mission')" id='defaultOpen'>Mission</button>
+    <button style = "margin-left: 4%;" class="tablinks" onclick="openTab(event, 'Structure')">Structure</button>
 
 
     <script>
@@ -47,8 +47,10 @@ description:
 
     <div id="statement">
         <div>
-            <h2 style="text-align: left; font-size: 1.5em;">BEAM is UC Berkeley's premier outreach and mentorship
+            <h2 class = "source" style="font-weight: 700; text-align: left; font-size: 2.1em;">BEAM is UC Berkeley's premier outreach and mentorship
                 organization.</h2>
+
+
             <p style="font-size: 1.125em;" class="mission-statement">Elementary and middle school students should be
                 able to explore their curiosity of
                 the
@@ -79,10 +81,10 @@ description:
         <div class="news-row">
             <div class="thumbnail left">
                 <div class="news-logo">
-                    <img src="/images/npr.png">
+                    <img  src="/images/npr.png">
                 </div>
                 <div class="news-container">
-                    <h3 style="font-weight: bold;">NPR | Will STEM education be the child left behind?</h3>
+                    <h3 class = "source" style="font-weight: bold;">NPR | Will STEM education be the child left behind?</h3>
                     <p style="font-size: 1.125em;">
                         "A combination of budget cuts and policy decisions has left many local, state and federal bodies
                         short on funds to robustly back science education...
@@ -99,10 +101,10 @@ description:
 
             <div class="thumbnail mid">
                 <div class="news-logo">
-                    <img src="/images/berkscirev.png">
+                    <img style = "padding-top: 18%; padding-bottom: 17%;" src="/images/berkscirev.png">
                 </div>
                 <div class="news-container">
-                    <h3 style="font-weight: bold;">Berkeley Science Review | Cal Engineering Students Take It To the
+                    <h3 class = "source" style="font-weight: bold;">Berkeley Science Review | Cal Engineering Students Take It To the
                         Classroom</h3>
                     <p style="font-size: 1.125em;">
                         "[According to the Lawrence Hall of Science] 80% of local K-5 teachers spend less than 60
@@ -121,10 +123,10 @@ description:
 
             <div class="thumbnail right">
                 <div class="news-logo">
-                    <img src="/images/sfgate.png">
+                    <img style = "padding-top: 3%; padding-bottom: 5%;" src="/images/sfgate.png">
                 </div>
-                <div class="news-container">
-                    <h3 style="font-weight: bold;">SFGate | Cause on top of classes draw UC Berkeley students</h3>
+                <div  class="news-container">
+                    <h3 class = "source" style="font-weight: bold;">SFGate | Cause on top of classes draw UC Berkeley students</h3>
                     <p style="font-size: 1.125em;">
                         BEAM “is not just some sort of weekly outreach thing and you go and it’s like 'whatever,’” BEAM
                         president ('14) Tiffany Chung says.
@@ -162,7 +164,7 @@ description:
                     <h1 class="count">300+</h1>
                     <h2 class="parts">K-8 STUDENTS</h2>
                 </div>
-                <div style="margin-left: 20%;" class="info-graph"><img class="icon" src="../images/icons/school.png">
+                <div style="margin-left: 10%;" class="info-graph"><img class="icon" src="../images/icons/school.png">
                     <h1 class="count">16</h1>
                     <h2 class="parts">SCHOOLS</h2>
                 </div>
@@ -180,7 +182,7 @@ description:
         <div class="descriptions">
             <div class="left-column">
                 <div class="news-content" style="width:30vw;vertical-align:top">
-                    <h2 style="text-align:left; font-size:1.125em">CURRICULUM</h2>
+                    <h2 class = "source" style="text-align:left; font-size:1.125em">CURRICULUM</h2>
                     <p style="text-align:left;font-size:1.125em">Curriculum creates all the lessons we teach for BEAM! This
                         includes not only writing the lesson itself but also testing each hands-on portion of the
                         lesson.
@@ -191,7 +193,7 @@ description:
                 </div>
 
                 <div class="news-content" style="width:30vw;vertical-align:top">
-                    <h2 style="text-align:left;font-size:1.125em">EXTERNAL AFFAIRS</h2>
+                    <h2 class = "source" style="text-align:left;font-size:1.125em">EXTERNAL AFFAIRS</h2>
                     <p style="text-align:left;font-size:1.125em">External Affairs manages BEAM’s finances and public
                         relations. On
                         the
@@ -204,7 +206,7 @@ description:
                 </div>
 
                 <div class="news-content" style="width:30vw;vertical-align:top">
-                    <h2 style="text-align:left; font-size:1.125em">LOGISTICS</h2>
+                    <h2 class = "source" style="text-align:left; font-size:1.125em">LOGISTICS</h2>
                     <p style="text-align:left;font-size:1.125em">Logistics is responsible for all the materials BEAM uses
                         for its
                         lessons. They work with curriculum to ensure that the proposed materials are within budget, then
@@ -221,7 +223,7 @@ description:
 
             <div class="right-column">
                 <div class="news-content" style="width:30vw;vertical-align:top">
-                    <h2 style="text-align:left; font-size:1.125em">MENTOR DEVELOPMENT</h2>
+                    <h2 class = "source" style="text-align:left; font-size:1.125em">MENTOR DEVELOPMENT</h2>
                     <p style="text-align:left;font-size:1.125em">MD is responsible for the overall quality of BEAM’s
                         mentorship.
                         They
@@ -232,7 +234,7 @@ description:
                 </div>
 
                 <div class="news-content" style="width:30vw;vertical-align:top">
-                    <h2 style="text-align:left; font-size:1.125em">OUTREACH</h2>
+                    <h2 class = "source" style="text-align:left; font-size:1.125em">OUTREACH</h2>
                     <p style="text-align:left;font-size:1.125em"> Outreach is responsible for ensuring that BEAM is a
                         positive
                         community where people are able to bond with each other and grow outside of the classroom. They
@@ -242,8 +244,8 @@ description:
                         SPLASH,
                         E4K, and Cal Day.</p>
                 </div>
-                <div class="news-content" style="width:30vw;vertical-align:top">
-                    <h2 style="text-align:left; font-size:1.125em">SITE LEADING</h2>
+                <div class="news-content" style="width:30vw;vertical-align:top;margin-top: 5%">
+                    <h2 class = "source" style="text-align:left; font-size:1.125em">SITE LEADING</h2>
                     <p style="text-align:left;font-size:1.125em">Site Leading is made up of the site leaders and the two
                         site
                         coordinators. Site Leaders facilitate the weekly lessons at one of BEAM’s partner schools each
@@ -260,7 +262,7 @@ description:
 
         </div>
     </div>
-    <h2 style = "margin-top: 5%; margin-bottom: 5%;"> Meet Our Staff Members</h2>
+    <h2  style = "margin-top: 5%; margin-bottom: 5%;"> Meet Our Staff Members</h2>
     <div class="content" id="about-content">
         <div id="tiles">
         </div>
