--- a/calendar.html
+++ b/calendar.html
@@ -1,7 +1,7 @@
 ---
 title: Events
 heading:
-description: In addition to visiting our local elementary and middle schools weekly, our mentors also help organize and volunteer at a variety of educational outreach events throughtout our community . Check out some highlights from our previous events below, and see what upcoming events we will be at on our calendar!
+description: In addition to visiting our local elementary and middle schools weekly, our mentors also help organize and volunteer at a variety of educational outreach events throughout our community. Check out some highlights from our previous events below, and see what upcoming events we will be at on our calendar!
 ---
 
 <!--Flexbox Magic source: https://codepen.io/spartanatreyu/pen/MYBoKXf-->
