--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@ description: Berkeley Engineers and Mentors
 </section> -->
 
 <div class="Logo">
-
-	<strong id="acronym">BEAM</strong>
-	<br>
-	<h1 id="words">Berkeley Engineers and Mentors</h1>
-	<br>
-	<a class="scroll-down" href="#target"></a>
+	<div class="stuff">
+		<strong id="acronym">BEAM</strong>
+		<br>
+		<h1 id="words">Berkeley Engineers and Mentors</h1>
+		<br>
+		<a class="scroll-down" href="#target"></a>
+	</div>
 
 </div>
 
@@ -39,11 +40,12 @@ description: Berkeley Engineers and Mentors
 				</p>
 				<!-- style = "padding: 2%; width: 35%; -->
 				<!-- !!!remember to change after deploying -->
-				<a id="link" href="about"><button style="margin-top: 3%; padding: 2%; width: 35%;" class="custom-button"><span style = "font-size: .8em; font-weight: normal;">Read More
+				<a id="link" href="about"><button style="margin-top: 3%; padding: 2%; width: 35%;"
+						class="custom-button"><span style="font-size: .8em; font-weight: normal;">Read More
 						</span></button></a>
 			</div>
 			<div class="image">
-				<img src="/images/group-pic.jpg" alt="Screenshot" class="screenshot editable" />
+				<img src="/images/index2.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -52,11 +54,11 @@ description: Berkeley Engineers and Mentors
 		<div class="container flex">
 			<div class="text editable">
 				<h2 class="header">What We Do </h2>
-				<p class="body"> You can find us at 16 elementary and middle schools in the Berkeley and Oakland area,
-					teaching over
-					300 students a week with our engaging project
-					based science and engineering lessons.</p>
-				<a id="link" href="lessons"><button style="margin-top: 3%; padding: 2%; width: 35%;" class="custom-button"><span style = "font-size: .8em; font-weight: normal;">Read
+				<p class="body">You can find us at 16 elementary and middle schools in the Berkeley and Oakland area,
+					teaching over 300 students a week with our engaging science and engineering lessons including
+					prosthetic limbs, bottle rockets, strawberry DNA extraction, and much more!</p>
+				<a id="link" href="lessons"><button style="margin-top: 3%; padding: 2%; width: 35%;"
+						class="custom-button"><span style="font-size: .8em; font-weight: normal;">Read
 							More
 						</span></button></a>
 			</div>
@@ -73,15 +75,15 @@ description: Berkeley Engineers and Mentors
 		<div class="container flex">
 			<div class="text editable">
 				<h2 class="header">Join the Family</h2>
-				<p class="body"> Interested in being a part of the BEAM team? Follow us on <a
-						href="https://www.facebook.com/beam.teach/">Facebook</a> for updates about our Spring 2020 info
-					session!</p>
-					<a id="link" href="join"><button style="margin-top: 3%; padding: 2%; width: 35%;" class="custom-button"><span style = "font-size: .8em; font-weight: normal;">Read
-						More
-					</span></button></a>
+				<p class="body">Interested in being part of the BEAM team? Follow us on Facebook for updates—application
+					information will be available at our Spring 2020 Info Session!</p>
+				<a id="link" href="join"><button style="margin-top: 3%; padding: 2%; width: 35%;"
+						class="custom-button"><span style="font-size: .8em; font-weight: normal;">Read
+							More
+						</span></button></a>
 			</div>
 			<div class=" image">
-				<img src="/images/decal-tower.jpg" alt="Screenshot" class="screenshot editable" />
+				<img src="/images/index3.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
