--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ description: Berkeley Engineers and Mentors
 				</p>
 				<!-- style = "padding: 2%; width: 35%; -->
 				<!-- !!!remember to change after deploying -->
-				<a id="link" href="about"><button style="margin-top: 3%; padding: 2%; width: 35%;"
+				<button onclick="window.location.href = 'about';" style="margin-top: 3%; padding: 2%; width: 35%;"
 						class="custom-button"><span style="font-size: .8em; font-weight: normal;">Read More
-						</span></button></a>
+						</span></button>
 			</div>
 			<div class="image">
 				<img src="/images/index2.jpg" alt="Screenshot" class="screenshot editable" />
@@ -57,10 +57,10 @@ description: Berkeley Engineers and Mentors
 				<p class="body">You can find us at 16 elementary and middle schools in the Berkeley and Oakland area,
 					teaching over 300 students a week with our engaging science and engineering lessons including
 					prosthetic limbs, bottle rockets, strawberry DNA extraction, and much more!</p>
-				<a id="link" href="lessons"><button style="margin-top: 3%; padding: 2%; width: 35%;"
+				<button onclick="window.location.href = 'lessons';" style="margin-top: 3%; padding: 2%; width: 35%;"
 						class="custom-button"><span style="font-size: .8em; font-weight: normal;">Read
 							More
-						</span></button></a>
+						</span></button>
 			</div>
 			<div style="height:400px; width:40%; overflow:hidden; margin-left: 2%">
 				<iframe class="custom-google-map" style="position:relative; top:-50px; border:none;"
@@ -77,10 +77,10 @@ description: Berkeley Engineers and Mentors
 				<h2 class="header">Join the Family</h2>
 				<p class="body">Interested in being part of the BEAM team? Follow us on Facebook for updates—application
 					information will be available at our Spring 2020 Info Session!</p>
-				<a id="link" href="join"><button style="margin-top: 3%; padding: 2%; width: 35%;"
+				<button onclick="window.location.href = 'join';" style="margin-top: 3%; padding: 2%; width: 35%;"
 						class="custom-button"><span style="font-size: .8em; font-weight: normal;">Read
 							More
-						</span></button></a>
+						</span></button>
 			</div>
 			<div class=" image">
 				<img src="/images/index3.jpg" alt="Screenshot" class="screenshot editable" />
