rough finish of join page

--- a/lessons.html
+++ b/lessons.html
@@ -1,9 +1,6 @@
 ---
 title: Lessons
-description: Each of our lessons is custom-designed by one of our staff members from the curriculum committee and
-undergoes feedback and testing before it is brought to site. Our lessons present to elementary and middle school
-students a large breadth of engineering and science topics and we continue to produce new lessons each semester. Here
-are some of our favorites—we invite you to witness the work that we do or to even use them for your own classroom!
+description: Each of our lessons is custom-designed by one of our staff members from the curriculum committee and undergoes feedback and testing before it is brought to site. Our lessons present to elementary and middle school students a large breadth of engineering and science topics and we continue to produce new lessons each semester. Here are some of our favorites—we invite you to witness the work that we do or to even use them for your own classroom!
 ---
 <div id="lessons">
   <div class="lesson-container" id="lesson-container">
