better about badges

--- a/about.html
+++ b/about.html
@@ -95,8 +95,8 @@ description:
                     </p>
 
 
-                    
-                       
+
+
                         <button onclick="window.open('http://www.npr.org/sections/ed/2015/10/28/451194296/will-stem-education-be-the-child-left-behind', '_blank')" class="custom-button"><span
                                 style="font-size: .8em; font-weight: normal;">Read</span></button>
                 </div>
@@ -337,7 +337,7 @@ description:
                         htmlExpr += '<div id=\"staff\">';
                         htmlExpr += '<div id=\"staff-text\">';
                         //Name
-                        htmlExpr += '<b><h2>' + data[i][0] + '</h2></b>';
+                        htmlExpr += '<b><h2 style="font-size:1.2em;">' + data[i][0] + '</h2></b>';
                         //Major/Year
                         htmlExpr += '<h4>' + data[i][1] + '</h4>';
                         //Committees
