website changes #1, #2, #4, #5, as well as some formatting for lessons page

--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@ description:
         </div>
         <div class="mission-photos">
             <img class="mp1" src="../images/mission1.jpg">
-            <img class="mp2" src="../images/mission2.jpg">
+            <img class="mp2" src="../images/mission2.png">
         </div>
     </div>
     <div id="news">
