about page icons need work

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@ description:
     <div id="news">
         <h2>News</h2>
         <div class="news-row">
-            <div class="thumbnail left">
+            <div class="thumbnal left">
                 <div class="news-logo">
                     <img src="/images/npr.png">
                 </div>
@@ -97,12 +97,13 @@ description:
 
 
 
-                        <button onclick="window.open('http://www.npr.org/sections/ed/2015/10/28/451194296/will-stem-education-be-the-child-left-behind', '_blank')" class="custom-button"><span
-                                style="font-size: .8em; font-weight: normal;">Read</span></button>
+                    <button
+                        onclick="window.open('http://www.npr.org/sections/ed/2015/10/28/451194296/will-stem-education-be-the-child-left-behind', '_blank')"
+                        class="custom-button"><span style="font-size: .8em; font-weight: normal;">Read</span></button>
                 </div>
             </div>
 
-            <div class="thumbnail mid">
+            <div class="thumbnal mid">
                 <div class="news-logo">
                     <img style="padding-top: 18%; padding-bottom: 17%;" src="/images/berkscirev.png">
                 </div>
@@ -125,7 +126,7 @@ description:
                 </div>
             </div>
 
-            <div class="thumbnail right">
+            <div class="thumbnal right">
                 <div class="news-logo">
                     <img style="padding-top: 3%; padding-bottom: 5%;" src="/images/sfgate.png">
                 </div>
@@ -152,9 +153,10 @@ description:
 
 
         </div>
-    </div>
 
 </section>
+</div>
+
 
 <section id="Structure" class="tabcontent">
     <section id="Short-info">
