--- a/contact.html
+++ b/contact.html
@@ -49,3 +49,6 @@ description:
 		target="_blank"><button class="custom-button"><span style= "font-size: .8em; font-weight: normal;">Read</span></button></a> -->
 	</form>
 </div>
+
+<div style="height:100px;">
+</div>
