--- a/join.html
+++ b/join.html
@@ -119,7 +119,7 @@ description:
       </p>
 
     <p style="text-align: left; "> <b>How can I get to site if I don't have a car? </b></p>
-      <p style="text-align: left;"> temp </p>
+      <p style="text-align: left;">  Transportation is entirely covered by BEAM! Some schools are within walking distance and transportation will be provided for those that require driving. </p>
 
     <p style="text-align: left; "> <b>Do I have to be a STEM major to be a mentor? </b></p>
       <p style="text-align: left;">
