added slideshow images

--- a/calendar.html
+++ b/calendar.html
@@ -6,11 +6,11 @@ description: In addition to visiting our local elementary and middle schools wee
 
 <!--Flexbox Magic source: https://codepen.io/spartanatreyu/pen/MYBoKXf-->
 <div class="slideshow">
-  <div class="slide1"><img class="slide-image" src="../images/test3.jpg"></div>
-  <div class="slide2"><img class="slide-image" src="../images/test3.jpg"></div>
-  <div class="slide3"><img class="slide-image" src="../images/test3.jpg"></div>
-  <div class="slide3"><img class="slide-image" src="../images/test3.jpg"></div>
-  <div class="slide3"><img class="slide-image" src="../images/test3.jpg"></div>
+  <div class="slide1"><img class="slide-image" src="../images/darren-smile.jpg"></div>
+  <div class="slide2"><img class="slide-image" src="../images/slideshow/rocket.jpg"></div>
+  <div class="slide3"><img class="slide-image" src="../images/zach-birdbox.jpg"></div>
+  <div class="slide3"><img class="slide-image" src="../images/slideshow/zach.jpg"></div>
+  <div class="slide3"><img class="slide-image" src="../images/group.jpg"></div>
   <div class="slide3"><img class="slide-image" src="../images/test3.jpg"></div>
 
 </div>
