events page redo

--- a/calendar.html
+++ b/calendar.html
@@ -1,21 +1,23 @@
 ---
 title: Events
 heading:
-description: In addition to visiting our local elementary and middle schools weekly, our mentors also help organize and volunteer at a variety of educational outreach events throughout our community. Check out some highlights from our previous events below, and see what upcoming events we will be at on our calendar!
+description: In addition to visiting our local elementary and middle schools weekly, our mentors also help organize and volunteer at a variety of educational outreach events throughout our community. Check out some highlights from our previous events below, and stay posted to see what events we will be participating in this semester!
 ---
 
 <!--Flexbox Magic source: https://codepen.io/spartanatreyu/pen/MYBoKXf-->
-<div class="slideshow">
-  <div class="slide1"><img class="slide-image" src="../images/darren-smile.jpg"></div>
+<div  class="slideshow">
+  <div class="slide1"><img class="slide-image" src="../images/slideshow/1.jpg"></div>
   <div class="slide2"><img class="slide-image" src="../images/slideshow/rocket.jpg"></div>
-  <div class="slide3"><img class="slide-image" src="../images/zach-birdbox.jpg"></div>
-  <div class="slide3"><img class="slide-image" src="../images/slideshow/zach.jpg"></div>
-  <div class="slide3"><img class="slide-image" src="../images/group.jpg"></div>
-  <div class="slide3"><img class="slide-image" src="../images/test3.jpg"></div>
+  <div class="slide3"><img class="slide-image" src="../images/slideshow/2.jpg"></div>
+  <div class="slide3"><img class="slide-image" src="../images/slideshow/3.jpg"></div>
+  <div class="slide3"><img class="slide-image" src="../images/slideshow/4.jpg"></div>
+  <!-- <div class="slide3"><img class="slide-image" src="../images/slideshow/2.jpg"></div> -->
 
 </div>
 
-<img style = "text-align:center; width:100%;" src ="../images/S20-flyer-draft1-back.png">
+<div style = "padding-bottom: 1%;"></div>
+
+
 
 
 <!-- Old Events Calendar -->
@@ -26,4 +28,3 @@ description: In addition to visiting our local elementary and middle schools wee
 
 
 
-</div> -->
