--- a/donate.html
+++ b/donate.html
@@ -9,7 +9,7 @@ description:
 
 
 
-<section style="margin-bottom: 100px; padding-top: 90px; display: flex;">
+<section style="padding-top: 90px; display: flex;">
     <div class="content" style="width: 60%; padding-right: 8%;">
         <h2 style="font-size: 2.250em; text-align: left;">Donate</h2>
         <p>You can help empower K-8 students across the Berkeley and Oakland area today with a donation to BEAM. Your
