maybe fixing the images on the donate and join pages

--- a/donate.html
+++ b/donate.html
@@ -30,5 +30,5 @@ description:
         <button style="padding: 2%; width: 35%;" onclick="window.open('https://asuc.org/donate/#section-1', '_blank')" class="custom-button"><span style="font-size: 0.8em; font-weight: bold;">Donate Now</span></button>
     </div>
 
-    <img style="width: 40%; height: auto;" src="/images/bottle-rocket.jpg">
+    <img style="width: 20vw; height: 20vw;" src="/images/bottle-rocket.jpg">
 </section>
