--- a/join.html
+++ b/join.html
@@ -38,7 +38,7 @@ description:
 
 
 
-    <img style="width: 40%; height: auto;" src="/images/join1.png">
+    <img style="width: 20vw; height: 20vw;" src="/images/join1.png">
 
 
 
