checking the tab info

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 ---
-title:
+title: About
 description:
 ---
 
@@ -302,7 +302,6 @@ description:
             ['Kelly Chang', 'MCB 2020', 'External Affairs, Site Leading', 'kelly'],
             ['Kelvin Zhang', 'CS 2020', 'Director of External Affairs', 'kelvin'],
             ['Krish Nayar', 'BioE 2021', 'Mentor Development, Site Leading', 'krish'],
-            ['Lauryn Jordan', 'BioE 2020', 'Outreach, Site Leading', 'lauryn'],
             ['Monica Oh', 'IB 2020', 'Curriculum, Site Leading', 'monica'],
             ['Nico Carballal', 'MechE 2021', 'Director of Site Leading', 'nico'],
             ['Nicole Denamur', 'IB 2020', 'Director of Curriculum', 'nikki'],
