--- a/donate.html
+++ b/donate.html
@@ -6,7 +6,7 @@ description:
 
 ---
 <!--<div class="map" id="map"></div>-->
-
+<title> Donate </title>
 
 
 <section style="padding-top: 90px; display: flex;">
