--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 title: BEAM
 description: Berkeley Engineers and Mentors
 ---
+<title> BEAM </title>
 <!-- <section class="hero">
 
 	<div class="text-container">
