--- a/join.html
+++ b/join.html
@@ -6,7 +6,7 @@ description:
 
 ---
 <!--<div class="map" id="map"></div>-->
-
+<title> Join </title>
 
 
 <section style="margin-bottom: 100px; padding-top: 90px; display: flex;">
