--- a/calendar.html
+++ b/calendar.html
@@ -3,6 +3,7 @@ title: Events
 heading:
 description: In addition to visiting our local elementary and middle schools weekly, our mentors also help organize and volunteer at a variety of educational outreach events throughout our community. Check out some highlights from our previous events below, and stay posted to see what events we will be participating in this semester!
 ---
+<title> Events </title>
 
 <!--Flexbox Magic source: https://codepen.io/spartanatreyu/pen/MYBoKXf-->
 <div  class="slideshow">
