--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@ description:
 ---
 <!--<div class="map" id="map"></div>-->
 <!-- section style = "margin-bottom: 100px; padding-top: 90px; display: flex;"> -->
+<title> Contact </title>
 
 <div style="margin-bottom: 100px; padding-top: 80px; display: flex;" class="contact-box">
 	<div class="contact-details">
