join page padding

--- a/news.html
+++ b/news.html
@@ -18,7 +18,7 @@ description: Check out our blog as our mentors share their experiences from the 
 
 <div class="thumbnail news-thumbnail">
     <div class="news-logo">
-        <img src="/images/zipcar.png">
+        <img style = "width: 100%;" src="/images/zipcar.png">
     </div>
     <div class="news-content">
         <h3>BEAM Wins ZipCar Award</h3>
