--- a/lessons.html
+++ b/lessons.html
@@ -39,7 +39,7 @@ description: Each of our lessons is custom-designed by one of our staff members 
         html += '<div class="caption">';
 
         // All images used here are royalty-free stock photos.
-        html += '<img src="/images/' + lessons[i][0] + '.png" style="filter:sepia(0.4); -webkit-filter:sepia(0.4);-moz-filter:sepia(0.4);-ms-filter:sepia(0.4)">';
+        html += '<img class="lessonImage" src="/images/' + lessons[i][0] + '.png" style="filter:sepia(0.4); -webkit-filter:sepia(0.4);-moz-filter:sepia(0.4);-ms-filter:sepia(0.4)">';
         html += '<h3>' + lessons[i][1] + '</h3>';
         html += '<p>' + lessons[i][2] + '</p>';
         html += '</div>';
@@ -82,7 +82,7 @@ description: Each of our lessons is custom-designed by one of our staff members 
         }
         html += '<div class="caption">';
         // All images used here are royalty-free stock photos.
-        html += '<img src="/images/' + lessons[i][0] + '.png" style="filter:sepia(0.4); -webkit-filter:sepia(0.4);-moz-filter:sepia(0.4);-ms-filter:sepia(0.4)">';
+        html += '<img class="lessonImage" src="/images/' + lessons[i][0] + '.png" style="filter:sepia(0.4); -webkit-filter:sepia(0.4);-moz-filter:sepia(0.4);-ms-filter:sepia(0.4)">';
         html += '<h3>' + lessons[i][1] + '</h3>';
         html += '<p>' + lessons[i][2] + '</p>';
 
