added back join page IDs

--- a/join.html
+++ b/join.html
@@ -46,9 +46,9 @@ description:
 </section>
 
 <div style="background-color:#f2f2f2; padding-top: 5vh; text-align: center; width:100vw; margin-left: -50vw; left:50%; position:relative;">
-  <div style="width:55%; display:inline-block">
+  <div style="width:75%; padding-bottom: 5vh; display:inline-block">
   <h2 style="font-size: 2.0em; ">Mentor Experiences </h2>
-  <div style="width:75%; display:inline-block;">
+  <div id = "testimonial1" style="width:75%; display:inline-block;">
     <h2 style="font-size: 1.5em; text-align: left; "> What would you consider to be hallmarks of a good mentor? How have you demonstrated those traits in your own mentoring? </h2>
     <img style="width:10vw; height:auto; position:absolute; margin:0px;"src="/images/icons/join1.png"></img>
     <p style="text-align: left;">
@@ -61,7 +61,7 @@ description:
     </p>
   </div>
 
-  <div style="width:75%; display:inline-block;">
+  <div id = "testimonial2" style="width:75%; display:inline-block;">
     <h2 style="font-size: 1.5em; text-align: left; "> As a new mentor in BEAM, what did you expect and what did you not expect? </h2>
     <!-- <img style="width:10vw; height:auto; position:absolute; margin:0px;"src="/images/icons/join2.png"></img> -->
     <p style="text-align: left;">
@@ -74,7 +74,7 @@ description:
     </p>
   </div>
 
-  <div style="width:75%; display:inline-block;">
+  <div id = "testimonial3" style="width:75%; display:inline-block;">
     <h2 style="font-size: 1.5em; text-align: left; "> What is one takeaway you have from this semester in BEAM? </h2>
     <!-- <img style="width:10vw; height:auto; position:absolute; margin:0px;"src="/images/icons/join3.png"></img> -->
     <p style="text-align: left;">
@@ -87,7 +87,7 @@ description:
     </p>
   </div>
 
-    <div style="width:75%; display:inline-block;">
+    <div id = "testimonial4" style="width:75%; display:inline-block;">
       <h2 style="font-size: 1.5em; text-align: left; "> What is one takeaway you have from this semester in BEAM? </h2>
       <!-- <img style="width:10vw; height:auto; position:absolute; margin:0px;"src="/images/icons/join4.png"></img> -->
       <p style="text-align: left;">
@@ -122,7 +122,7 @@ description:
       <p style="text-align: left;">  Transportation is entirely covered by BEAM! Some schools are within walking distance and transportation will be provided for those that require driving. </p>
 
     <p style="text-align: left; "> <b>Do I have to be a STEM major to be a mentor? </b></p>
-      <p style="text-align: left;">
+      <p  style="padding-bottom: 5vh; text-align: left;">
         Absolutely not! We have very comprehensive lesson plans that you will read every week and that we go over during decal on Mondays to prepare you for site.
       </p>
   </div>
