--- a/join.html
+++ b/join.html
@@ -50,7 +50,7 @@ description:
   <h2 style="font-size: 2.0em; ">Mentor Experiences </h2>
   <div id = "testimonial1" style="width:75%; display:inline-block;">
     <h2 style="font-size: 1.5em; text-align: left; "> What would you consider to be hallmarks of a good mentor? How have you demonstrated those traits in your own mentoring? </h2>
-    <img style="width:10vw; height:auto; position:absolute; margin:0px;"src="/images/icons/join1.png"></img>
+    <!-- <img style="width:10vw; height:auto; position:absolute; margin:0px;"src="/images/icons/join1.png"></img> -->
     <p style="text-align: left;">
       One hallmark of a good mentor is <b> being able to ask questions that spur students to realize the answer rather than feeding them facts.</b> I would say I’m pretty good at that since a lot of the time my understanding is not perfect, so it’s not always the easiest thing to explain without being confusing (especially bio and chem modules). Instead, I ask them questions like “what do you think would happen if I do this” or “how do you think this is affected by that” or “can someone give me an example of this”. Then, if I want to make sure that everyone agrees, I’ll ask “who agrees with what he/she said.” If someone disagrees, then I’ll have them explain their logic, and that way I can <b> understand the thought process of the mentees better. </b> I’m then better equipped to give an example or another question to get everyone on the right page, and then I can generalize whatever concept we’ve “discovered” to the teaching goal in the module.
     </p>
