removed image on about page

--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@ description:
 </div>
 
 
-<section id="Structure" class="tabcontent">
+<section id="Structure" class="tabcontent" style="display:block; text-align:center;">
     <section id="Short-info">
         <div class="black">
             <p style="font-size: 1.125em; width: 37em;">BEAM was founded in 2008 as both a non-profit student
@@ -181,7 +181,6 @@ description:
 
             </div>
         </div>
-        <div><img class="structure-image" src="../images/structure.jpg"></div>
     </section>
     <div id="committees" class="news-thumbnail" style="text-align:center">
         <h2> Our Staff </h2>
