--- a/join.html
+++ b/join.html
@@ -14,7 +14,7 @@ description:
         <h2 style="font-size: 2.0em; text-align: left;">Joining BEAM is the perfect way to share your love for science
           and engineering with the local community!
         </h2>
-        <p>We accept mentor applications at the beginning of each semester. Follow us on Facebook or enter your email below for updates regarding our Spring 2020 Info Session.</p>
+        <p>We accept mentor applications at the beginning of each semester. Follow us on <a href="https://www.facebook.com/beam.teach/">Facebook</a> or enter your email below for updates regarding our Spring 2020 Info Session.</p>
 
         <form action="http://formspree.io/beam.teach@gmail.com" method="post" class="contact-form" style="display:flex; flex-wrap:wrap;">
       		<input type="hidden" name="_to" value="beam.teach@gmail.com" />
