--- a/join.html
+++ b/join.html
@@ -140,6 +140,7 @@ description:
 
 
 <div style="background-color:#ffffff; padding-top: 5vh; text-align: center;">
+  <a name="FAQ"></a>
   <h2 style="font-size: 2.0em; ">Frequently Asked Questions </h2>
 
   <div style="width:75%; display:inline-block;">
