--- a/calendar.html
+++ b/calendar.html
@@ -5,6 +5,91 @@ description: In addition to visiting our local elementary and middle schools wee
 ---
 <title> Events </title>
 
+<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css'>
+<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+
+<style>
+
+#app {
+  padding: 50px 0;
+}
+
+.timeline {
+  margin: 50px 0;
+  list-style-type: none;
+  display: flex;
+  padding: 0;
+  text-align: center;
+}
+
+.timeline li {
+  transition: all 200ms ease-in;
+}
+
+.timestamp {
+  width: 200px;
+  margin-bottom: 20px;
+  padding: 0px 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: 100;
+}
+
+.status {
+  padding: 0px 40px;
+  display: flex;
+  justify-content: center;
+  border-top: 4px solid #3e70ff;
+  position: relative;
+  transition: all 200ms ease-in;
+}
+
+.status span {
+  font-weight: 600;
+  padding-top: 20px;
+}
+
+.status span:before {
+  content: '';
+  width: 25px;
+  height: 25px;
+  background-color: #e8eeff;
+  border-radius: 25px;
+  border: 4px solid #3e70ff;
+  position: absolute;
+  top: -15px;
+  left: 42%;
+  transition: all 200ms ease-in;
+}
+
+.swiper-control {
+  text-align: right;
+}
+
+.swiper-container {
+  width: 100%;
+  height: 250px;
+  margin: 50px 0;
+  overflow: hidden;
+  padding: 0 20px 30px 20px;
+}
+
+.swiper-slide {
+  width: 200px;
+  text-align: center;
+  font-size: 18px;
+}
+
+.swiper-slide:nth-child(2n) {
+  width: 40%;
+}
+
+.swiper-slide:nth-child(3n) {
+  width: 20%;
+}
+</style>
+
 <!--Flexbox Magic source: https://codepen.io/spartanatreyu/pen/MYBoKXf-->
 <div  class="slideshow">
   <div class="slide1"><img class="slide-image" src="../images/slideshow/1.jpg"></div>
@@ -19,12 +104,61 @@ description: In addition to visiting our local elementary and middle schools wee
 <div style = "padding-bottom: 1%;"></div>
 
 
+<div id="app" class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="swiper-container">
+        <p class="swiper-control">
+          <button type="button" class="btn btn-default btn-sm prev-slide">Prev</button>
+          <button type="button" class="btn btn-default btn-sm next-slide">Next</button>
+        </p>
+        <div class="swiper-wrapper timeline">
+          <div class="swiper-slide" v-for="item in steps">
+            <div class="timestamp">
+              <span class="date">{{item.dateLabel}}<span>
+            </div>
+            <div class="status">
+              <span>{{item.title}}</span>
+            </div>
+          </div>
+        </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
+      </div>
+    </div>
+  </div>
+</div>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js'></script>
 
 
-<!-- Old Events Calendar -->
-<!-- <div style="text-align:center">
-  <iframe
-    src="https://calendar.google.com/calendar/b/2/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=YmVhbS5vdXRyZWFjaEBnbWFpbC5jb20&amp;color=%23039BE5"
-    style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
-    -->
+
+<script>const data = [
+  { dateLabel: 'January 2017', title: 'Gathering Information' },
+  { dateLabel: 'February 2017', title: 'Planning' },
+  { dateLabel: 'March 2017', title: 'Design' },
+  { dateLabel: 'April 2017', title: 'Content Writing and Assembly' },
+  { dateLabel: 'May 2017', title: 'Coding' },
+  { dateLabel: 'June 2017', title: 'Testing, Review & Launch' },
+  { dateLabel: 'July 2017', title: 'Maintenance' }
+];
+
+new Vue({
+  el: '#app',
+  data: {
+    steps: data,
+  },
+  mounted() {
+    var swiper = new Swiper('.swiper-container', {
+      //pagination: '.swiper-pagination',
+      slidesPerView: 4,
+      paginationClickable: true,
+      grabCursor: true,
+      paginationClickable: true,
+      nextButton: '.next-slide',
+      prevButton: '.prev-slide',
+    });
+  }
+})
+</script>
