--- a/calendar.html
+++ b/calendar.html
@@ -6,7 +6,6 @@ description: In addition to visiting our local elementary and middle schools wee
 <title> Events </title>
 
 <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css'>
-<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
 <style>
 
@@ -134,7 +133,8 @@ description: In addition to visiting our local elementary and middle schools wee
 
 
 
-<script>const data = [
+<script>
+  const data = [
   { dateLabel: 'January 2017', title: 'Gathering Information' },
   { dateLabel: 'February 2017', title: 'Planning' },
   { dateLabel: 'March 2017', title: 'Design' },
